assets/css/hookem.css
/* ... */
#preloader:before {
  content: "";
  position: fixed;
  top: calc(50% - 30px);
  left: calc(50% - 30px);
  border: 6px solid #cf751b;
  border-top-color: #efefef;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  -webkit-animation: animate-preloader 1s linear infinite;
  animation: animate-preloader 1s linear infinite;
}

@-webkit-keyframes animate-preloader {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes animate-preloader {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

/*--------------------------------------------------------------
# Disable aos animation delay on mobile devices
--------------------------------------------------------------*/
@media screen and (max-width: 768px) {
  [data-aos-delay] {
    transition-delay: 0 !important;
  }
}

/*--------------------------------------------------------------
# Center for photos
--------------------------------------------------------------*/
.center-cropped {
  object-fit: none; /* Do not scale the image */
  object-position: center; /* Center the image within the element */
  height: 550px;
  width: auto;
  overflow: hidden;
}

@media only screen and (max-width: 599px) {
  .center-cropped {
    object-fit: none; /* Do not scale the image */
    object-position: center; /* Center the image within the element */
    height: 100%;
    max-width: 375px;
    overflow: hidden;
  }
}
/*--------------------------------------------------------------
# end photos
--------------------------------------------------------------*/
/*--------------------------------------------------------------
# overlay
--------------------------------------------------------------*/

.custom_overlay_wrapper {
  position: relative;
}

.custom_overlay_wrapper img {
  /*width:auto;*/
  max-height: 550px;
}

.custom_overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: left;
  background-color: rgba(255, 255, 255, 0.8);
  opacity: 0;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
  -o-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
}

.custom_overlay:hover {
  opacity: 1;
}

.custom_overlay_inner {
  position: absolute;
  bottom: 30%;
  left: 5%;
  right: 0;
  transform: translateY(-50%);
}

.custom_overlay h4 {
  position: relative;
}

.custom_overlay p {
  color: #000;
  line-height: 1.4em;
  position: absolute;
  right: 50%;
}

.custom_overlay h4:after {
  background-color: #cf751b;
  content: "";
  position: absolute;
  left: 0;
  right: 50%;
  bottom: -5px;
  height: 2px;
}
/*------------------- TABLET ------------------*/
@media only screen and (min-width: 600px) and (max-width: 999px) {
  .custom_overlay h4 {
    font-size: 90%;
  }

  .custom_overlay p {
    /*font-size: 95%;*/
    line-height: 1.2em;
  }
}

/*------------------- MOBILE ------------------*/
@media only screen and (max-width: 599px) {
  .custom_overlay h4 {
    font-size: 100%;
  }

  .custom_overlay p {
    font-size: 85%;
  }
}
/*--------------------------------------------------------------
# Top Bar
--------------------------------------------------------------*/
#topbar {
  height: 40px;
  font-size: 14px;
  transition: all 0.5s;
  color: rgba(255, 255, 255, 0.6);
}

#topbar.topbar-scrolled {
  top: -40px;
}

#topbar .contact-info a {
  line-height: 1;
  color: rgba(255, 255, 255, 0.6);
  transition: 0.3s;
}

#topbar .contact-info a:hover {
  color: #fff;
}

#topbar .contact-info i {
  color: #cf751b;
  padding-right: 4px;
}

#topbar .contact-info i.icofont-phone {
  margin-left: 15px;
}

#topbar .social-links a {
  color: rgba(255, 255, 255, 0.5);
  padding-left: 15px;
  display: inline-block;
  line-height: 1px;
  transition: 0.3s;
}

#topbar .social-links a:hover {
  color: #cf751b;
}

#topbar .social-links a:first-child {
  border-left: 0;
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
  background: rgba(52, 58, 64, 0.2);
  transition: all 0.9s;
  z-index: 997;
  top: 40px;
}

#header.header-scrolled {
  top: 0;
  background: rgba(0, 0, 0, 0.9);
}
#header.header-scrolled .drop-down ul {
   
  background: #cf751b !important;
}
#header.header-scrolled .drop-down a:hover{
   
  color: #000000 !important;
}
#header .header-scrolled a {
  font-size: 28px;
  margin: 0;
  padding: 0;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
  visibility: hidden;
}

#header h2 {
  font-size: 28px;
  color: #fff;
  margin: 0;
  padding: 0;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
}

#header.header-scrolled h2 {
  font-size: 28px;
  margin: 0;
  padding: 0;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
  visibility: hidden;
}


#header.header-scrolled h1 a {
  margin: 0 0 10px 0;
  font-size: 44px;
  color: #fff;
  padding: 0;
  line-height: 56px;
  font-weight: 700;
  letter-spacing: normal;
  text-transform: uppercase;
  visibility: visible;
}

#header h1 {
  font-size: 28px;
  margin: 0;
  padding: 0;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: #fff;
  visibility: hidden;
}

#header .logo a {
  color: #fff;
}

#header .logo img {
  max-height: 40px;
}

@media (max-width: 992px) {
  #header {
    top: 0;
    padding: 15px 0;
    background: transparent;
  }

  #header.header-scrolled h1 a {
    margin: 0 0 10px 0;
    font-size: 28px;
    color: #fff;
    padding: 0;
    line-height: 56px;
    font-weight: 700;
    letter-spacing: normal;
    text-transform: uppercase;
    visibility: visible;
  }

  #header .logo {
    font-size: 28px;
  }
  /*#header .logo h2 {
            font-size: 8px;
        }*/
}

.header-inner-pages {
  background: rgba(0, 0, 0, 0.9) !important;
}
/* ... */

